# stellarforge

./: .gitignore  DEPLOYMENT.md  PHASE1_ARCHITECTURE.md  PROGRESS.md  PROJECT.md  README.md  SESSION_SUMMARY.md  nginx.conf  setup_database.ps1
backend/: .env.example  Cargo.toml
backend/src/: config.rs  main.rs
backend/src/api/: health.rs  mod.rs  projects.rs
backend/src/database/: connection.rs  mod.rs  repository.rs
backend/src/generator/: distribution.rs  generation.rs  mod.rs  naming.rs  star_properties.rs
backend/src/models/: mod.rs  project.rs  request.rs  response.rs  star.rs  star_system.rs
blazor/StellarForge.Web/: Program.cs  _Imports.razor
blazor/StellarForge.Web/Layout/: NavMenu.razor
blazor/StellarForge.Web/Models/: GenerateRequest.cs
blazor/StellarForge.Web/Pages/: Home.razor
blazor/StellarForge.Web/Properties/: launchSettings.json
blazor/StellarForge.Web/Services/: StellarForgeApiService.cs
blazor/StellarForge.Web/wwwroot/: index.html
scripts/: smoke_test.ps1
sql/: 01_create_database.sql  02_create_tables.sql  03_helper_functions.sql
