[package]
name = "stellarforge-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["derive"] }

# UUID support
uuid = { version = "1", features = ["serde", "v4"] }

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
env_logger = "0.11"
log = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
